# Barket

./: .env  Cargo.toml  docker-compose.yml
migrations/2026-05-01-121318-0000_create_users/: down.sql  up.sql
migrations/2026-05-02-092331-0000_refresh_token/: down.sql  up.sql
migrations/2026-05-03-183919-0000_products/: up.sql
src/: db.rs  main.rs  schema.rs
src/handlers/: auth.rs  mod.rs  products.rs
src/middleware/: auth.rs  mod.rs
src/models/: mod.rs  product.rs  user.rs
src/utils/: jwt.rs  password.rs
