[package]
name = "Barket"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
bcrypt = "0.19.0"
chrono = { version = "0.4.44", features = ["serde"] }
diesel = { version = "2", features = ["postgres", "r2d2", "chrono", "uuid"] }
dotenvy = "0.15"
futures-util = "0.3.32"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
r2d2 = "0.8.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
 